Styled H1 and A elements

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -13,7 +14,8 @@
         <img src="" alt="phone">
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you</p>
-        <img src="" alt="">
+        <img src="" alt="tents">
+        <img src="" alt="phonelogo">
         <h1>Coming Soon for iPhone and Android</h1>
         <a href=""></a>
         <p>© Excursion</p>
