--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <div class="container">
         <h1>Discover hidden places in the world around you</h1>
-        <a href=""></a>
+        <a href="">Download Excursion (Coming soon!)</a>
         <img src="" alt="phone">
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you</p>
         <img src="" alt="tents">
         <img src="" alt="phonelogo">
         <h1>Coming Soon for iPhone and Android</h1>
-        <a href=""></a>
+        <a href="">Download Excursion (Coming soon!)</a>
         <p>© Excursion</p>
     </div>
 </body>
