--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <h1>Discover hidden places in the world around you</h1>
         <a href="">Download Excursion (Coming soon!)</a>
-        <video src="./excursion/resources/excursion.mp4"></video>
+        <video src="./resources/excursion.mp4"></video>
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you</p>
-        <img src="./excursion/resources/camp.webp" alt="tents">
-        <img src="./excursion/resources/phone.webp" alt="phonelogo">
+        <img src="./resources/camp.webp" alt="tents">
+        <img src="./resources/phone.webp" alt="phonelogo">
         <h1>Coming Soon for iPhone and Android</h1>
         <a href="">Download Excursion (Coming soon!)</a>
         <p>© Excursion</p>
