--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="container">
         <h1>Discover hidden places in the world around you</h1>
         <a href="">Download Excursion (Coming soon!)</a>
-        <video src="./resources/excursion.mp4" autoplay="true"></video>
+        <video controls autoplay>
+            <source src="./resources/excursion.mp4" type="video/mp4">
+        </video>
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you</p>
         <img src="./resources/camp.webp" alt="tents">
